improve slider animation and fix x overflow (#529)
* improve slider animation and fix x overflow

* improve transformation handling

* fix left-right arrow nav

* fix left/right button navigation

* fix left/right button navigation

* Add function to change default slide show duration;improve CLS

* further CLS improvements

* further CLS improvements

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

* increase dot size to compliant with tap target from LHS

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -18,7 +18,7 @@
     margin-top: 5%;
 }
 
-@media (min-width:  1024px) {
+@media (width >=  1024px) {
     .carousel > div {
         display: flex;
         flex-direction: row;
@@ -36,7 +36,7 @@
     order: 2;
 }
 
-@media (min-width:  768px) {
+@media (width >=  768px) {
     .carousel > div > div {
         order: 1;
         width: 100%;
@@ -64,7 +64,7 @@
     order: 1;
 }
 
-@media (min-width:  1024px) {
+@media (width >=  1024px) {
     .carousel .slider-wrapper {
         order: 2;
     }
@@ -73,6 +73,7 @@
 /* Slide container */
 .carousel .slider-wrapper .slider {
     position: relative;
+    overflow-x: clip;
 }
 
 /* Pictures in slider */
@@ -87,7 +88,7 @@
     object-fit: cover;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
     .carousel .slider-wrapper .slider picture img {
         object-fit: contain;
     }
@@ -105,9 +106,8 @@
 /* Second to n slide in slider */
 .carousel .slider-wrapper .slider picture:nth-child(n+2) {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    left: 0;
+    top: 0;
     z-index: 1;
     flex-direction: column;
     justify-content: flex-start;
@@ -116,8 +116,7 @@
 /* hide slide */
 .carousel .hide {
     opacity: 0;
-    transition-duration: 500ms;
-    transition-property: opacity;
+    transition-property: right;
 }
 
 /* show slide */
@@ -152,18 +151,28 @@
 .carousel .slider-wrapper .dotted-nav {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     z-index: 998;
     margin-top: 9px;
     margin-bottom: 9px;
+    height: 20px;
 }
 
 /* Bottom Nav */
 .carousel .dotted-nav .dot {
-    margin: 0 6px;
+    margin: 6px;
     border-radius: 50%;
-    width: 6px;
-    height: 6px;
+    width: 8px;
+    height: 8px;
+    pointer-events: none;
+}
+
+@media (width >= 768px) {
+    .carousel .dotted-nav .dot {
+        pointer-events: all;
+        cursor: pointer;
+    }
 }
 
 
